<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:padding="16dp"
    android:id="@+id/cardViewRide"
    android:background="@color/card_background"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textViewDeparture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_box_hint"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewSeatsAvailable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avaliable_seats"
                    android:textColor="#2E7D32"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewSeeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_description"
                    android:textColor="#2E7D32"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_hint"
                    android:textColor="#2E7D32"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <Button
                    android:id="@+id/buttonJoinRide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#2E7D32"
                    android:layout_gravity="end" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewRecurrence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recurrence"
            android:textColor="#2E7D32"
            android:textSize="14sp"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <View
        android:id="@+id/overlayUnavailable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA808080"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/complet"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewUnavailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/indisponible"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="gone" />
</androidx.cardview.widget.CardView>
